# wai-middleware-delegate

./: .envrc  .gitignore  ChangeLog.md  LICENSE  README.md  build.nix  cabal.project  default.nix  dev.nix  nixpkgs.nix  overlays.nix  release.nix  shell.nix  wai-middleware-delegate.cabal
.circleci/: config.yml
.github/workflows/: cabal.yml  ci.yml
nix/: 18.09.nix  18.09pre146471.nix  fetchNixPkgs.nix  haskell-overridez.nix  lts-haskell.14.0.nix
src/Network/Wai/Middleware/: Delegate.hs
templates/: nginx-test.conf.mustache
test/: IntegrationTest.hs  certificate.csr  certificate.pem  key.pem
test/Test/: Fetch.hs  HttpReply.hs  NginxGateway.hs  NginxTest.hs  TestRequests.hs  WithExtras.hs
