name:               wai-middleware-delegate
version:            0.1.0.0
synopsis:           WAI middleware that delegates requests to other Applications or hosts
description:        WAI middleware to intercept requests that match a predicate and respond
                    to them using other applications for proxied hosts.
                    [WAI] <http://hackage.haskell.org/package/wai>
license:            BSD3
license-file:       LICENSE
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Web,Wai
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=2.00

library
  exposed-modules:  Network.Wai.Middleware.Delegate
  hs-source-dirs:   src
  build-depends:    base              >= 4.10 && < 5
                  , blaze-builder     >= 0.4.1.0 && < 0.5
                  , async             >= 2.2.1 && < 2.3
                  , bytestring        >= 0.10.8.2 && < 0.11
                  , case-insensitive  >= 1.2.0.11 && < 1.3
                  , conduit           >= 1.3.0.3 && < 1.4
                  , conduit-extra     >= 1.3.0 && < 1.4
                  , data-default      >= 0.7.1.1 && < 0.8
                  , http-client       >= 0.5.13.1 && < 0.6
                  , http-conduit      >= 2.3.2 && < 2.4
                  , http-types        >= 0.12.1 && < 0.12.2
                  , streaming-commons >= 0.2.1.0 && < 0.2.2
                  , text              >= 1.2.3.0 && < 1.3
                  , wai               >= 3.2 && < 3.3
                  , wai-conduit       >= 3.0.0.4 && < 3.1
  default-language: Haskell2010
