cabal-version:      3.0
name:               wai-middleware-delegate
version:            0.2.0.1
synopsis:           WAI middleware that delegates handling of requests.
description:
  [WAI](http://hackage.haskell.org/package/wai) middleware that intercepts requests
  that match a predicate and responds to them using alternate @WAI@ Applications or
  proxied hosts.
  Read this [short example](https://github.com/adetokunbo/wai-middleware-delegate#readme)
  for an introduction to its usage.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Web
homepage:
  https://github.com/adetokunbo/wai-middleware-delegate#readme

bug-reports:
  https://github.com/adetokunbo/wai-middleware-delegate/issues

build-type:         Simple
extra-source-files: ChangeLog.md
data-files:
  templates/*.mustache

source-repository head
  type:     git
  location: https://github.com/adetokunbo/wai-middleware-delegate.git

library
  exposed-modules:  Network.Wai.Middleware.Delegate
  hs-source-dirs:   src
  build-depends:
    , async              ^>=2.2.1
    , base               >=4.10 && <5
    , blaze-builder      ^>=0.4.1.0
    , bytestring         >=0.10.8.2 && <0.11 || >=0.11.3 && <0.13
    , case-insensitive   ^>=1.2.0.11
    , conduit            ^>=1.3.0.3
    , conduit-extra      ^>=1.3.0
    , http-client        >=0.5.13 && <0.8
    , http-client-tls    >=0.3 && <0.4
    , http-types         >=0.12.1 && <0.13
    , streaming-commons  >=0.2.1 && <0.3
    , text               >=1.2.3 && <2.3
    , wai                ^>=3.2
    , wai-conduit        ^>=3.0.0.4

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite integration-test
  type:             exitcode-stdio-1.0
  main-is:          IntegrationTest.hs
  autogen-modules:  Paths_wai_middleware_delegate
  other-modules:
    Paths_wai_middleware_delegate
    Test.Fetch
    Test.HttpReply
    Test.NginxGateway
    Test.TestRequests
    Test.WithExtras
    Network.Connection.CPP

  hs-source-dirs:   test
  build-depends:
    , async
    , base
    , blaze-builder
    , bytestring
    , bytestring-lexing
    , case-insensitive
    , conduit
    , conduit-extra
    , crypton-connection       >=0.3.1 && < 0.5
    , data-default             >=0.7 && <0.9
    , directory                >=1.3 && <1.4
    , filepath                 >=1.4 && <1.6
    , hspec                    >=2.1
    , hspec-tmp-proc
    , http-client
    , http-client-tls
    , http-types
    , mustache                 >=2.3 && <2.5
    , network
    , random                   >=1.1
    , resourcet
    , temporary                >=1.2 && <1.5
    , test-certs               >=0.1 && <0.2
    , text
    , tmp-proc                 >=0.7
    , vault
    , wai
    , wai-conduit
    , wai-middleware-delegate
    , warp
    , warp-tls                 >=3.4
    , unix                     >=2.7 && <2.9

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs -threaded
